--- a/JavaChat/FrontEnd/style.css
+++ b/JavaChat/FrontEnd/style.css
@@ -7,33 +7,48 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    /* background: linear-gradient(90deg,#e2e2e2,#c9d6ff) */
-    background: linear-gradient(90deg,#14ebdd,#2ddc12)
-}
-.img{
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    display: flex;
+    /* background: linear-gradient(90deg,#14ebdd,#2ddc12); */
     position: relative;
-}
-.container{
-    position: relative;
-    width: 850px;
-    height: 550px;
-    background: #fff;
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(0,0,0,.2);
-    margin: 20px ;
     overflow: hidden;
 }
 
-.form-box{
+.bg-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+
+.bg-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: blur(5px);
+    transform: scale(1.1);
+    background-repeat: no-repeat;
+}
+
+
+
+.container {
+    position: relative;
+    width: 60vw;
+    height: 75vh;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+    overflow: hidden;
+}
+
+.form-box {
     position: absolute;
     right: 0;
     width: 50%;
@@ -45,97 +60,106 @@ body{
     text-align: center;
     padding: 40px;
     z-index: 1;
-    transition: .6s ease-in-out 1.2s, visibility 0s 1s ;
+    transition: .6s ease-in-out 1.2s, visibility 0s 1s;
 }
 
-.container.active .form-box{
+.container.active .form-box {
     right: 50%;
-  
+
 }
 
-.form-box.register{
+.form-box.register {
     visibility: hidden;
 }
 
-.container.active .form-box.register{
+.container.active .form-box.register {
     visibility: visible;
     transition: .6s ease-in-out 1.2s;
 }
 
-form{
+form {
     /* background: purple; */
-    width: 100% ;
-}
-
-.container h1{
-    font-size: 36px;
-    margin: -10px 0;
-}
-
-.input-box{
-    position: relative;
-    margin: 30px 0;
-}
-
-.input-box input{
     width: 100%;
-    padding: 13px 50px 13px 20px;
+}
+
+.container h1 {
+    font-size: 2em;
+    margin-bottom: 2%;
+}
+
+.input-box {
+    position: relative;
+}
+
+.input-box input {
+    border: none;
+    width: 100%;
+    padding: 3%;
     background: #eee;
     border-radius: 8px;
-    border: none;
+    margin-top: 2%;
+    margin-bottom: 3%;
     outline: none;
     font-size: 16px;
     color: #333;
     font-weight: 500;
+    display: flex;
+    justify-content: right;
+    align-items: right;
 }
 
-.input-box input::placeholder{
+.input-box input::placeholder {
     color: #888;
     font-weight: 400;
 }
 
 .input-box i{
-    position: absolute;
-    right: 20px;
+    z-index: 2;
     top: 50%;
+    margin-left: 40%;
+    position: absolute;
+    border: none;
     transform: translateY(-50%);
-    font-size: 20px;
+    font-size: 1.5em;
     color: #333;
 }
-.forgot-link{
-    margin: -15px 0 15px ;
+
+.forgot-link {
+    margin: -15px 0 15px;
 }
 
-.forgot-link a{
+.forgot-link a {
     font-size: 14.5px;
     color: #333;
     text-decoration: none;
 }
-.btn{
+
+.btn {
     width: 100%;
     height: 48px;
     /* background: #14ebdd; */
     background: #7494ec;
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     border: none;
-    border-radius: 8px;;
+    border-radius: 8px;
+    ;
     cursor: pointer;
     font-size: 16px;
     color: #fff;
     font-weight: 600;
 }
 
-.container p{
+.container p {
     font-size: 14.5px;
     margin: 15px 0;
 }
 
-.social-icons{
+.social-icons {
     display: flex;
     justify-content: center;
 }
 
-.social-icons i{
+.social-icons i {
     display: inline-flex;
     padding: 10px;
     border: 2px solid #ccc;
@@ -146,14 +170,14 @@ form{
     margin: 0 8px;
 }
 
-.toggle-box{
+.toggle-box {
     position: absolute;
     width: 100%;
     height: 100%;
-} 
+}
 
-.toggle-box::before{
-    content:'';
+.toggle-box::before {
+    content: '';
     position: absolute;
     left: -250%;
     width: 300%;
@@ -165,11 +189,11 @@ form{
     transition: 1.6s ease-in-out;
 }
 
-.container.active .toggle-box::before{
+.container.active .toggle-box::before {
     left: 50%;
 }
 
-.toggle-panel{
+.toggle-panel {
     position: absolute;
     width: 50%;
     height: 100%;
@@ -180,34 +204,34 @@ form{
     justify-content: center;
     align-items: center;
     z-index: 2;
-    transition: .6s ease-in-out ;
+    transition: .6s ease-in-out;
 }
 
-.toggle-panel.toggle-left{
+.toggle-panel.toggle-left {
     left: 0;
     transition-delay: 1.2s;
 }
 
-.container.active .toggle-panel.toggle-left{
+.container.active .toggle-panel.toggle-left {
     left: -50%;
     transition-delay: .6s;
 }
 
-.toggle-panel.toggle-right{
+.toggle-panel.toggle-right {
     right: -50%;
     transition-delay: .6s;
 }
 
-.container.active .toggle-panel.toggle-right{
+.container.active .toggle-panel.toggle-right {
     right: 0;
     transition-delay: 1.2s;
 }
 
-.toggle-panel p{
+.toggle-panel p {
     margin-bottom: 20px;
 }
 
-.toggle-panel .btn{
+.toggle-panel .btn {
     width: 160px;
     height: 46px;
     background: transparent;
