--- a/JavaChat/FrontEnd/style.css
+++ b/JavaChat/FrontEnd/style.css
@@ -174,6 +174,7 @@ form {
     position: absolute;
     width: 100%;
     height: 100%;
+    
 }
 
 .toggle-box::before {
@@ -184,6 +185,7 @@ form {
     height: 100%;
     /* background: #7494ec; */
     background: rgb(43, 173, 14);
+    box-shadow: 0px 0px 10px rgb(43, 173, 14);
     border-radius: 150px;
     z-index: 2;
     transition: 1.6s ease-in-out;
@@ -203,9 +205,30 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+  
     z-index: 2;
     transition: .6s ease-in-out;
+    padding-bottom: 7%;
 }
+
+/* New logo container styles */
+.logo-container {
+
+    height: 30%;
+    width: 35%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0%;
+}
+.logo-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+
+}
+
 
 .toggle-panel.toggle-left {
     left: 0;
@@ -227,8 +250,12 @@ form {
     transition-delay: 1.2s;
 }
 
+.toogle-panel h1 {
+    font-size: 2em;
+}
+
 .toggle-panel p {
-    margin-bottom: 20px;
+    margin-bottom: 2%;
 }
 
 .toggle-panel .btn {
