--- a/JavaChat/FrontEnd/ChatSystem/chat.css
+++ b/JavaChat/FrontEnd/ChatSystem/chat.css
@@ -179,3 +179,7 @@ body {
     height: 100%;
     width: 100%;
 }
+
+h1 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
