--- a/JavaChat/public/login.css
+++ b/JavaChat/public/login.css
@@ -55,7 +55,6 @@ body {
     height: 100%;
     background: #fff;
     display: flex;
-    align-items: center;
     color: #333;
     text-align: center;
     padding: 40px;
@@ -89,6 +88,7 @@ form {
 
 .input-box {
     position: relative;
+    margin-top: 5%;
 }
 
 .input-box input {
@@ -113,7 +113,7 @@ form {
     font-weight: 400;
 }
 
-.input-box i{
+.input-box i {
     z-index: 2;
     top: 50%;
     margin-left: 40%;
@@ -124,8 +124,19 @@ form {
     color: #333;
 }
 
-.forgot-link {
-    margin: -15px 0 15px;
+#username-modal {
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+#username-modal .modal-card {
+    max-width: 400px;
+    width: 90%;
+}
+
+.btn {
+    cursor: pointer;
 }
 
 .forgot-link a {
@@ -165,14 +176,12 @@ form {
     width: 15%;
     border: 2px solid #33333365;
     border-radius: 10px;
-     background: conic-gradient(
-        from -90deg at 50% 50%,
-        #FBBC05 0deg 30deg,
-        #EA4335 30deg 130deg,
-        #4285F4 130deg 220deg,
-        #34A853 220deg 320deg,
-        #FBBC05 320deg 360deg
-    );
+    background: conic-gradient(from -90deg at 50% 50%,
+            #FBBC05 0deg 30deg,
+            #EA4335 30deg 130deg,
+            #4285F4 130deg 220deg,
+            #34A853 220deg 320deg,
+            #FBBC05 320deg 360deg);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -186,7 +195,7 @@ form {
     position: absolute;
     width: 100%;
     height: 100%;
-    
+
 }
 
 .toggle-box::before {
@@ -218,7 +227,7 @@ form {
     justify-content: center;
     align-items: center;
     text-align: center;
-  
+
     z-index: 2;
     transition: .6s ease-in-out;
     padding-bottom: 7%;
@@ -234,6 +243,7 @@ form {
     justify-content: center;
     margin: 0%;
 }
+
 .logo-container img {
     width: 100%;
     height: 100%;
